--- a/.github/workflows/ugos-build.yml
+++ b/.github/workflows/ugos-build.yml
@@ -9,11 +9,13 @@ on:
         default: "false"
   release:
     types: [published]
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 
 jobs:
+  permissions:
+    contents: write
   build:
     env:
       DEBIAN_FRONTEND: noninteractive
@@ -40,17 +42,22 @@ jobs:
         uses: actions/checkout@master
 
       - name: Initialization environment
+        working-directory: /home/runner/work
         run: |
           sudo -E apt-get update
           sudo -E apt install -y build-essential clang flex bison g++ gawk \
             gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-            python3-distutils rsync unzip zlib1g-dev file wget libc6 \
+            python3-distutils rsync unzip zlib1g-dev file wget libc6 libevent-dev \
             sudo vim
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
 
-          echo "/usr/local/lib" >> /etc/ld.so.conf
-          ldconfig
+          # wget https://github.com/libevent/libevent/releases/download/release-2.1.12-stable/libevent-2.1.12-stable.tar.gz
+          # tar -zxvf libevent-2.1.*-stable.tar.gz && cd libevent-2.1.*-stable/
+          # ./configure && make && sudo make install
+          # echo "/usr/local/lib" | sudo tee -a /etc/ld.so.conf
+          # sudo ldconfig
+          # sudo ln -s /usr/local/lib/libevent-2.1.so.7 /usr/lib64/
 
       - name: Restore cached build
         id: cache-build-restore
@@ -62,6 +69,10 @@ jobs:
 
       - name: Clone source code
         run: git clone -b ${{env.openwrt_branch}} --single-branch https://github.com/openwrt/openwrt openwrt || (cd openwrt && git pull && git checkout -f ${{env.openwrt_branch}})
+
+      - name: Add extra packages
+        working-directory: ./openwrt
+        run: rm -rf package/p7zip && git clone https://github.com/hubutui/p7zip-lede.git package/p7zip
 
       - name: Update feeds
         working-directory: ./openwrt
@@ -93,7 +104,18 @@ jobs:
 
       - name: Upload bin directory
         uses: actions/upload-artifact@master
-        if: always()
+        # if: always()
         with:
           name: ugos_bin
           path: openwrt/bin
+
+      - name: Wrap binaries
+        working-directory: ./openwrt
+        run: |
+          tar zcvf bin.tar.gz ./bin
+
+      - name: upload binaries to release
+        uses: softprops/action-gh-release@v1
+        if: ${{startsWith(github.ref, 'refs/tags/') }}
+        with:
+          files: bin.tar.gz
