--- a/.github/workflows/ugos-build.yml
+++ b/.github/workflows/ugos-build.yml
@@ -72,9 +72,13 @@ jobs:
         working-directory: ./openwrt
         run: ./scripts/feeds install -a
 
-      - name: Load custom configuration
+      - name: Load custom configuration and execute extra operations
+        working-directory: ./openwrt
         run: |
-          cp dotconfig openwrt/.config
+          cp ../dotconfig .config
+
+          # https://github.com/openwrt/packages/issues/18876
+          ( [ -f "staging_dir/hostpkg/bin/pip3" ] && staging_dir/hostpkg/bin/pip3 install pip setuptools --upgrade  ) || echo "Skip pip3 upgrade"
 
       - name: SSH connection to Actions
         uses: P3TERX/ssh2actions@v1.0.0
